--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 
     <!-- Custom styles for this template-->
     <link href="assets/css/sb-admin-2.css" rel="stylesheet">
+    <!-- <link href="assets/css/sbadmin-pro-2.css" rel="stylesheet"> -->
 
     <title>React App</title>
   </head>
