--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <!-- Custom styles for this template-->
     <link href="assets/css/sb-admin-2.css" rel="stylesheet">
     <!-- <link href="assets/css/sbadmin-pro-2.css" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="../src/index.css"> -->
 
     <title>React App</title>
   </head>
